# dbdemos-notebooks

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: sync-upstream.yml
_resources/: 00-global-setup-v2.py  00-global-setup.py  LICENCE  NOTICE
aibi/aibi-customer-support/: AI-BI-Customer-support.py
aibi/aibi-marketing-campaign/: AI-BI-Marketing-campaign.py
aibi/aibi-patient-genomics/: AI-BI-Patient-genomics.py
aibi/aibi-portfolio-assistant/: AI-BI-Portfolio-assistant.py
aibi/aibi-sales-pipeline-review/: AI-BI-Sales-pipeline.py
aibi/aibi-supply-chain-forecasting/: AI-BI-Supply-chain.py
aibi/dbdemos_aibi_cme_marketing_campaign/: AI-BI-Marketing-campaign.py
demo-FSI/lakehouse-fsi-credit-decisioning/: 00-Credit-Decisioning.py  Data-Intelligence-Platform-Demo-NEW.py  Data-Intelligence-Platform-Demo.py  Responsible-AI-Demo.py  config.py
demo-FSI/lakehouse-fsi-fraud-detection/: 00-FSI-fraud-detection-introduction-lakehouse.sql  config.py
demo-FSI/lakehouse-fsi-smart-claims/: 00-Smart-Claims-Introduction.py  config.py
demo-HLS/lakehouse-patient-readmission/: 00-patient-readmission-introduction.py  config.py
demo-manufacturing/iot-data-intelligence-platform/: 00-IOT-wind-turbine-introduction-DI-platform.sql  config.py
product_demos/cdc-pipeline/test2/cdc_dabs/: README.md  databricks.yml  pyproject.toml
product_demos/cdc-pipeline/test2/cdc_dabs/resources/: cdc_dabs.job.yml  cdc_dabs.pipeline.yml
product_demos/cdc-pipeline/test2/cdc_dabs/src/: notebook.ipynb  pipeline.ipynb
product_demos/cdc-pipeline/test2/cdc_dabs/tests/: main_test.py
(+983 files in other folders)
